# screenwriter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/prompts/: copilot-chat.md
.github/workflows/: ci-slow-tests.yml  ci-tests.yml  release.yml
src/asciinwriter/: __init__.py  __main__.py
src/screenwriter/: __init__.py  __main__.py
tests/: __init__.py  test_asciinema.py  test_human_type.py  test_main.py  test_main_function.py  test_typing_delay.py
